# rust-peergos-client

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  server.md
.github/workflows/: ci.yml
crates/peergos-cbor/: Cargo.toml
crates/peergos-cbor/src/: decode.rs  encode.rs  lib.rs  tests.rs
crates/peergos-cli/: Cargo.toml
crates/peergos-cli/src/: main.rs
crates/peergos-core/: Cargo.toml
crates/peergos-core/src/: auth.rs  boxing.rs  buffered.rs  cached.rs  champ.rs  champ_merge.rs  direct_s3.rs  error.rs  keys.rs  lib.rs  mutable.rs  poster.rs  ram.rs  storage.rs  symmetric.rs  tests.rs
crates/peergos-crypto/: Cargo.toml
crates/peergos-crypto/src/: boxing.rs  hash.rs  lib.rs  sign.rs  symmetric.rs  tests.rs
crates/peergos-fs/: Cargo.toml
crates/peergos-fs/examples/: bat_invariant.rs  batch_retrieve.rs  block_annotate.rs  buffered.rs  capsfromuser.rs  champ_publish.rs  change_password.rs  complete_friend_share_live.rs  context.rs  create_secret_link.rs  create_writeshare_live.rs  cryptree_cache.rs  delete.rs  delete_account.rs  dir_chunking.rs  dir_sharing_state.rs  direct_s3.rs  direct_s3_live.rs  feed.rs  file_section.rs  filewrapper.rs  follow.rs  follow_send_live.rs  friends.rs  groups.rs  hidden_dirs.rs  incoming.rs  incoming_advanced.rs  js_methods.rs  login.rs  ls_live.rs  mfa.rs  mkdir.rs  mkdir_writeshare_live.rs  move_advanced.rs  move_file.rs  multichunk_edit.rs  publish.rs  read_dir_live.rs  remove_follower.rs  (+20 more)
crates/peergos-fs/src/: account.rs  admin.rs  cache.rs  capability.rs  context.rs  cryptree.rs  feed.rs  filewrapper.rs  hashtree.rs  incoming.rs  lib.rs  login.rs  mfa.rs  migrate.rs  mimetype.rs  profile.rs  publish.rs  retrieve.rs  signup.rs  social.rs  tests.rs  thumbnail.rs  transaction.rs
crates/peergos-fs/src/email/: bridge.rs  client.rs  crypto.rs  message.rs  mod.rs
crates/peergos-fs/src/messaging/: chat.rs  controller.rs  envelope.rs  file_store.rs  id.rs  member.rs  message_ref.rs  messages.rs  messenger.rs  mod.rs  private_state.rs  store.rs  tests.rs  tree_clock.rs
crates/peergos-fs/tests/: mock_e2e.rs
crates/peergos-mock-server/: Cargo.toml
crates/peergos-mock-server/src/: lib.rs
crates/peergos-multiformats/: Cargo.toml
crates/peergos-multiformats/src/: bases.rs  lib.rs  tests.rs
crates/peergos-sync/: Cargo.toml
crates/peergos-sync/src/: file_state.rs  filesystem.rs  lib.rs  local_fs.rs  peergos_fs.rs  runner.rs  state.rs  sync.rs
crates/peergos-sync/tests/: sync_tests.rs
