[workspace]
resolver = "2"
members = [
    "crates/peergos-cbor",
    "crates/peergos-multiformats",
    "crates/peergos-crypto",
    "crates/peergos-core",
    "crates/peergos-fs",
    "crates/peergos-sync",
    "crates/peergos-mock-server",
    "crates/peergos-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Peergos/rust-peergos-client"

[workspace.dependencies]
peergos-cbor = { path = "crates/peergos-cbor" }
peergos-multiformats = { path = "crates/peergos-multiformats" }
peergos-crypto = { path = "crates/peergos-crypto" }
peergos-core = { path = "crates/peergos-core" }
peergos-fs = { path = "crates/peergos-fs" }
async-trait = "0.1"
chrono = "0.4"
filetime = "0.2"
pathdiff = "0.2"
