[package]
name = "peergos-mock-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
peergos-cbor.workspace = true
peergos-multiformats.workspace = true
peergos-crypto.workspace = true
peergos-core.workspace = true

async-trait = "0.1"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
