[package]
name = "peergos-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
peergos-cbor.workspace = true
peergos-multiformats.workspace = true
peergos-crypto.workspace = true
peergos-core.workspace = true
peergos-fs.workspace = true

async-trait.workspace = true
chrono.workspace = true
filetime.workspace = true
pathdiff.workspace = true
sha2 = "0.10"
walkdir = "2"
log = "0.4"

[dev-dependencies]
tempfile = "3"
rand = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
